--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,26 @@ p {
 .container nav ul li a {
   text-decoration: none;
   color: black;
+  position: relative;
+}
+
+@keyframes move {
+  0% {
+    top: 0px;
+  }
+  50% {
+    top: -5px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+.container nav ul li a:hover {
+  animation-name: move;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  color: darkred;
 }
 
 .top-content {
